# ooxmlsdk

./: Cargo.toml
crates/ooxmlsdk/: Cargo.toml  build.rs
crates/ooxmlsdk/data/parts/: ImagePart.json  Model3DReferenceRelationshipPart.json
crates/ooxmlsdk/src/: lib.rs  macros.rs
crates/ooxmlsdk/src/common/: mod.rs
crates/ooxmlsdk/src/parts/: alternative_format_import_part.rs  calculation_chain_part.rs  cell_metadata_part.rs  chart_color_style_part.rs  chart_drawing_part.rs  chart_part.rs  chart_style_part.rs  chartsheet_part.rs  comment_authors_part.rs  connections_part.rs  control_properties_part.rs  core_file_properties_part.rs  custom_data_part.rs  custom_data_properties_part.rs  custom_file_properties_part.rs  custom_property_part.rs  custom_xml_mappings_part.rs  custom_xml_part.rs  custom_xml_properties_part.rs  customization_part.rs  diagram_colors_part.rs  diagram_data_part.rs  diagram_layout_definition_part.rs  diagram_persist_layout_part.rs  diagram_style_part.rs  dialogsheet_part.rs  digital_signature_origin_part.rs  document_settings_part.rs  document_tasks_part.rs  drawings_part.rs  embedded_control_persistence_binary_data_part.rs  embedded_control_persistence_part.rs  embedded_object_part.rs  embedded_package_part.rs  endnotes_part.rs  excel_attached_toolbars_part.rs  extended_chart_part.rs  extended_file_properties_part.rs  external_workbook_part.rs  feature_property_bags_part.rs  (+89 more)
crates/ooxmlsdk/src/schemas/: mod.rs  schemas_microsoft_com_ink_2010_main.rs  schemas_microsoft_com_office_2006_01_customui.rs  schemas_microsoft_com_office_2019_extlst.rs  (+133 more)
(+14 files in other folders)
