[package]
name = "ooxmlsdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
hard-xml = { workspace = true }
zip = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
ooxmlsdk-build = { workspace = true }
